--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
       - restore_cache:
           keys:
             - gradle-cache-{{ checksum "build.gradle" }}
+            - gradle-cache-{{ checksum "build.gradle.kts" }}
+            - gradle-cache-{{ checksum "app/build.gradle" }}
+            - gradle-cache-{{ checksum "app/build.gradle.kts" }}
             - gradle-cache-
 
       # Asegurar permisos de Gradlew
@@ -30,7 +33,8 @@ jobs:
       - save_cache:
           paths:
             - ~/.gradle
-          key: gradle-cache-{{ checksum "build.gradle" }}
+          key: gradle-cache-{{ checksum "build.gradle.kts" }}-{{ checksum "app/build.gradle.kts" }}
+
 
       # Compilar proyecto
       - run:
